# bazel_project

./: .bazelversion  .gitignore  BUILD.bazel  MODULE.bazel  README.md
a/: BUILD.bazel  go.mod  main.go
b/: BUILD.bazel  go.mod  main.go
