module(
    name="bazel_project",
    version="1.0.0"
)

# WORKING
bazel_dep(name = "rules_go", version = "0.44.0")
bazel_dep(name = "gazelle", version = "0.35.0")

# NOT WORKING because of version `0.44.2` for `rules_go`
#bazel_dep(name = "rules_go", version = "0.44.2", repo_name = "io_bazel_rules_go")
#bazel_dep(name = "gazelle", version = "0.35.0", repo_name = "bazel_gazelle")

# NOT WORKING running `bazel run //:gazelle`
#bazel_dep(name = "rules_go", version = "0.44.0")
#bazel_dep(name = "gazelle", version = "0.35.0")
